--- a/app/src/styles/sidenav.css
+++ b/app/src/styles/sidenav.css
@@ -38,6 +38,7 @@
 /* When you mouse over the navigation links, change their color */
 .sidebar .item:hover {
 	color: #f1f1f1;
+	cursor: pointer;
 }
 
 /* Position and style the close button (top right corner) */
