--- a/app/src/styles/header.css
+++ b/app/src/styles/header.css
@@ -4,5 +4,13 @@
 	padding: 1vw;
 	background-color: black;
 	width: 100%;
-	height: 60px;
+	min-height: 60px;
+}
+
+.header .breadscumb {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 100%;
+	justify-content: center;
 }
