--- a/app/src/styles/app.css
+++ b/app/src/styles/app.css
@@ -14,15 +14,9 @@
 }
 
 .box-row {
-	display: flex;
 	flex-direction: row;
-	align-items: center;
-	align-content: center;
-	justify-content: center;
-	padding-top: 5vh;
 }
 
 .box-row > * {
-	padding-left: 5vw;
-	padding-right: 5vw;
+	padding: 0 5vw;
 }
