--- a/app/src/styles/button.css
+++ b/app/src/styles/button.css
@@ -16,6 +16,14 @@
 	cursor: pointer;
 }
 
+.button-active-toogle {
+	color: #f1f1f1;
+}
+
+.button-active-toogle:hover {
+	color: #818181;
+}
+
 .button-active {
 	color: #f1f1f1;
 }
