--- a/app/src/styles/app.css
+++ b/app/src/styles/app.css
@@ -20,3 +20,13 @@
 .box-row > * {
 	padding: 0 5vw;
 }
+
+.text {
+	padding: 8px;
+	text-decoration: none;
+	font-size: 18px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
+	background-color: inherit;
+}
