--- a/app/src/styles/index.css
+++ b/app/src/styles/index.css
@@ -1,15 +1,24 @@
-* {
+html {
+	font-family: "YouTube Noto", Roboto, Arial, Helvetica, sans-serif;
+	height: 100%;
+	box-sizing: border-box;
+}
+
+:root {
+	--youtube-red: #fe0900;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
 	margin: 0;
 	padding: 0;
 	border: 0;
 	outline: 0;
-	box-sizing: border-box;
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	display: block;
@@ -34,7 +43,7 @@ body {
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
 
