--- a/app/src/styles/video.css
+++ b/app/src/styles/video.css
@@ -427,3 +427,7 @@ svg {
 	background-color: rgb(0, 0, 0); /* Fallback color */
 	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
+
+.speed {
+	display: inline-flex;
+}
